[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "taad-smc"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Will Zhang", email = "willwz@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["arraystubs", "pytools", "taad-smc-io"]


[project.optional-dependencies]
all = ["taad-smc-prep", "taad-smc-analysis", "taad-smc-io"]
prep = ["taad-smc-prep"]
analysis = ["taad-smc-io", "taad-smc-analysis"]
presentation = ["taad-smc-io", "taad-smc-presentation"]

[tool.uv.sources]
arraystubs = { git = "https://github.com/willwiz/arraystubs.git" }
pytools = { git = "https://github.com/willwiz/pytools.git" }
taad-smc = { workspace = true }
taad-smc-io = { workspace = true }
taad-smc-prep = { workspace = true }
taad-smc-analysis = { workspace = true }
taad-smc-presentation = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
    "./taad-smc-prep",
    "./taad-smc-analysis",
    "./taad-smc-io",
    "./taad-smc-presentation",
]

[tool.uv.build-backend]
namespace = true
