[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "taad-smc"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Will Zhang", email = "willwz@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["pytools", "taad-smc-io", "pwlsplit"]


[project.optional-dependencies]
all = ["taad-smc-prep", "taad-smc-analysis", "taad-smc-io"]
prep = ["taad-smc-prep"]
analysis = ["taad-smc-io", "taad-smc-analysis"]
presentation = ["taad-smc-io", "taad-smc-presentation"]

[tool.uv.sources]
pytools = { git = "https://github.com/willwiz/pytools.git" }
pwlsplit = { git = "https://github.com/willwiz/pwlsplit.git" }
taad-smc = { workspace = true }
taad-smc-io = { workspace = true }
taad-smc-prep = { workspace = true }
taad-smc-analysis = { workspace = true }
taad-smc-presentation = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
    "./taad-smc-prep",
    "./taad-smc-analysis",
    "./taad-smc-io",
    "./taad-smc-presentation",
]

[tool.uv]
build-backend = { namespace = true }
config-settings = { editable_mode = "compat" }
