[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taad-smc-io"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Will Zhang", email = "willwz@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["taad-smc", "nptdms", "pandas", "pandas-stubs"]

[tool.uv.build-backend]
module-name = "taad_smc"
namespace = true
