[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taad-smc-prep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Will Zhang", email = "willwz@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["scipy-stubs", "scipy==1.17", "taad-smc-io", "matplotlib"]

[tool.uv.sources]
scipy = { path = "../../scipy-1.17.0.dev0-cp313-cp313-win_arm64.whl" }

[tool.uv.build-backend]
module-name = "taad_smc"
namespace = true
