[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taad-smc-prep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Will Zhang", email = "willwz@gmail.com" }]
requires-python = ">=3.14"
dependencies = ["scipy-stubs[scipy]", "taad-smc-io", "matplotlib"]


[tool.uv.build-backend]
module-name = "taad_smc"
namespace = true
